# jetbrains-internship

./: .gitmodules  CMakeLists.txt  README.md
DictionaryUI/: CMakeLists.txt  JetBrains.cpp  README.md
DictionaryUI/UI/: UI.cpp  UI.h
DictionaryUI/Utils/Search/: Search.cpp  Search.h
DictionaryUI/Utils/Threading/: SchedulerTask.h  TaskScheduler.h
JetBrains/: CMakeLists.txt  JetBrains.cpp
JetBrains/UI/: UI.cpp  UI.h
JetBrains/Utils/: Init.cpp  Init.h
JetBrains/Utils/Search/: Search.cpp  Search.h
JetBrains/Utils/Threading/: TaskScheduler.cpp  TaskScheduler.h  ThreadPool.cpp  ThreadPool.h  ThreadTask.h
TriangleApp/: CMakeLists.txt  README.md  ShapeGenerator.cpp  ShapeGenerator.h  TriangleApp.cpp  TriangleApp.h  TriangleGenerator.cpp  TriangleGenerator.h  main.cpp
